--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -128,8 +128,8 @@
     <!-- Regex array of allowable upstream ifaces for tethering - for example if you want
          tethering on a new interface called "foo2" add <item>"foo\\d"</item> to the array -->
     <string-array translatable="false" name="config_tether_upstream_regexs">
-        <item>"rmnet\\d"</item>
-        <item>"eth\\d"</item>
+        <item>"pdp\\d"</item>
+        <!-- <item>"eth\\d"</item> exclude ethX from consideration as an upstream for tether -->
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
